--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ target/
 /target/
 /*/target/
 /groovy/example-groovy/example-groovy.iml
+/*/*/.idea/
+/*/*/target/
+/*/*/*.iml
+/groovy/example-groovy/*.idea/
