--- a/spark-java/java-spark-wordcount/javaSparkWordCount/pom.xml
+++ b/spark-java/java-spark-wordcount/javaSparkWordCount/pom.xml
@@ -22,6 +22,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.10</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.10</artifactId>
             <version>1.0.1</version>
         </dependency>
